refactor: 일지 목록 조회 기능 전체적으로 수정